--- a/lege-management/package.json
+++ b/lege-management/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.3.1",
     "axios": "^1.3.4",
     "less": "^4.1.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
