--- a/lege-management/package.json
+++ b/lege-management/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@antv/g2": "^5.0.1",
     "antd": "^5.3.1",
     "axios": "^1.3.4",
     "less": "^4.1.3",
